Use pre-wrap instead of nl2br for editor review comments (bug 663478)

--- a/media/css/zamboni/editors.css
+++ b/media/css/zamboni/editors.css
@@ -750,8 +750,15 @@ div.editor-stats-table > div.editor-stats-dark {
     font-weight: normal;
 }
 
-.history_comment {
+.history-comment {
+    white-space: pre-wrap;
+    padding: 10px;
     overflow: auto;
+}
+
+.history-comment-byline {
+    padding: 0 10px;
+    font-style: italic;
 }
 
 .review-paging {
